# ai-workflow-observatory

./: .gitignore  README.md  index.html  pyproject.toml  sample-report.md
api/: summary.json
docs/: PRODUCT_ROADMAP.md
src/ai_workflow_observatory/: __init__.py  analysis.py  classifier.py  cli.py  costs.py  exporters.py  models.py  parser.py  rendering.py  storage.py  web.py  web_template.py
tests/: test_analysis.py  test_classifier.py  test_costs.py  test_parser.py
